trunk/Archive/ff91d673868ee981340ca8ff2f8ab86a-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:8:25: error: invalid operands of types ‘int*’ and ‘int*’ to binary ‘operator|’
     std::cout << (*(p | q)) << std::endl;
                         ^
